# math

./: .gitattributes  .gitignore  .gitmodules  .latexindent.yaml  Cargo.toml  Makefile  README.md  algorithm-design.tex  astro.config.mjs  calculus.tex  complex-analysis.tex  fix.py  header.tex  label.py  next.config.js  nonlinear-optimization-constrained.tex  nonlinear-optimization-unconstrained.tex  nonlinear-optimization.tex  ordinary-differential-equations.tex  package-lock.json  package.json  plenary.tex  pytex.py  real-analysis.tex  sandbox.tex  styles.css  tailwind.config.js  toc.json  toc.tex
.github/workflows/: build-all.sh  build.sh  ci.yml  ci.yml.bak
components/: ColorPicker.tsx  Tooltip.tsx  colors.ts
hw/: Makefile
omath/: .ocamlformat  Makefile  README  dune-project  minimath.opam
omath/lib/: dune  (+1 more)
pages/: index.tsx
scripts/: checkhealth.js  close-all.js  new.js
src/: build.rs  checkhealth.rs  cli.rs  consts.rs  doc.rs  label.rs  main.rs  parser.rs  pdftex.rs  prelude.rs  structs.rs  utils.rs
styles/: global.css
tex/: Makefile  algorithm-design.tex  build.py  calculus.tex  checkhealth.py  complex-analysis.tex  header.tex  main.tex  nonlinear-optimization.tex  ordinary-differential-equations.tex  plenary.tex  prelude.sty  pytex.py  setup.py  sha.py
tex_modules/: Makefile  README.md  __args__.py  __classes__.py  __consts__.py  __tests__.py  __texfile__.py  __utils__.py  dev.py  enumitem.sty  headers.sty  nguyenvukhang.sty  pytex  quoting.sty
web/: .gitignore  astro.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json
(+209 files in other folders)
