[package]
name = "minimath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.2"
tree-sitter = "0.20.10"

notify = { version = "6.1.1", optional = true }
notify-debouncer-mini = { version = "0.4.1", optional = true }

tree-sitter-latex = { path = "src/tree-sitter-latex" }

[features]
dev = ["dep:notify", "dep:notify-debouncer-mini"]
